# ChangeLog for sci-mathematics/pari
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/pari/ChangeLog,v 1.87 2012/03/06 17:06:06 bicatali Exp $

  23 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/pari-9999-no-automagic.patch, pari-9999.ebuild:
  updating pari-9999, test suite still failing because of difference in
  formatting of the output

  09 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -files/pari-2.5.0-doc-make.patch, -files/pari-2.5.0-macos.patch,
  -files/pari-2.5.0-mp.c.patch, -files/pari-2.5.1-no-automagic.patch,
  -files/pari-2.5.3-galoisanalysis_p4.patch, -files/pari-2.5.3-polred.patch,
  -files/pari-2.5.3-slow_determinant.patch,
  -files/pari-2.5.4-slow_determinant.patch, -files/pari-2.5.5-polred.patch,
  -files/pari-2.5.5-q_eint1.patch, -pari-2.5.3-r2.ebuild, -pari-2.5.5-r1.ebuild,
  -pari-2.5.5-r2.ebuild, -pari-2.5.5.ebuild, -pari-2.7.1-r1.ebuild:
  clean up unused ebuilds

  22 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  pari-9999.ebuild:
  port the change made in the 2.8 branch for testing to the 9999 branch

*pari-2.8_pre20150519 (19 May 2015)

  19 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +pari-2.8_pre20150519.ebuild:
  bump to match sage http://trac.sagemath.org/ticket/18435 - src_test improved
  and tests are failing due to formatting of the output.

  14 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  pari-2.8_pre20150510.ebuild:
  use the sage mirror for latest pari now that 6.7.beta5 is released.

*pari-2.8_pre20150510 (13 May 2015)

  13 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +pari-2.8_pre20150510.ebuild, -pari-2.8_pre20150430.ebuild:
  bump pari snapshot for 6.7 (trac #18394)

*pari-2.8_pre20150430 (03 May 2015)

  03 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>