@@ -84,7 +84,7 @@ sci-mathematics/lrcalc
 sci-mathematics/mcube
 sci-mathematics/optimal
 sci-mathematics/palp
-~sci-mathematics/pari-2.8_pre20150510
+~sci-mathematics/pari-2.8_pre20150611
 sci-mathematics/pari-data
 ~sci-mathematics/planarity-2.2.0
 sci-mathematics/polybori
