@@ -5,6 +5,5 @@
 # preparing ecm for removal. I only keep it in case it solves some OS X problems
 sci-mathematics/ecm
 # sage 6.8
->=sci-mathematics/pari-2.8_pre20150519
 >=sci-mathematics/gap-4.7.8
 >=sci-libs/libgap-4.7.8
