@@ -1,4 +1,4 @@
 DIST pari-2.7.1.tar.gz 3140893 SHA256 cc637918f3c0b20dc9bbea99e639e7a288b89ea4d0e4e3f9b7110a115bcb41be SHA512 ff32c181e6810af8a38f0dfe45b9f15d930923da5759c3e88595f56bf3c65ec0a79fdb9fb5f0e4ce0adb1ebc56a84e6b1606085057762073a85c0d1946857d5f
 DIST pari-2.8-1369-g0e48e9b.tar.gz 3466040 SHA256 732c834e6e89eb5f3371ce59e6715d6b90b3b26ff45d38c2be9a12f1a7657017 SHA512 e0dbe053120b44166c45b278f6a3e88d7275d946bf907251d6cc5e12755d02ed5243bf58d3ff07254473fe418d675c887c6ee8c14e1ea725ea9fee13af04efcb
 DIST pari-2.8-1564-gdeac36e.tar.gz 3504827 SHA256 809527119e52f63dd5622d441a498caa962614f9d204dd2f1e0a5b797445c8cd SHA512 7d1a3028acbf091fc528756774239db9a859b6f1539d7f0f4283e72c5434443e315f19fe90ee6f99bc1e13017cf8c8f415da22b8f6f96e34ec58c12660226675
-DIST pari-2.8-1577-gde33857.tar.gz 3508912 SHA256 d6624f4e2bd90f1a6761be05f2fee017500178defc3242af1f38f368932a073c SHA512 164b287470eadfdf7182fa907c5332f21bba05daea5a6260fe94617c6b5111b56fae2765a8173eb271ea44a5c9c04702bc0597c560eade3a6e24b3a30587fa00
+DIST pari-2.8-1637-g489005a.tar.gz 3512484 SHA256 5f8cac3c055b9ca43e31f105f2a956a2834b3937739926a1be8ec91fbc55dfac SHA512 18bcc65a3106d4d33f8389d130df5ac56f6856c8201abf2ed07492422797f93be5d3de0a2d44cc0cd55eaa5a85e03bb48378867641bdf8ef3709c041bdb9c9cc
