@@ -2,6 +2,14 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-mathematics/pari/ChangeLog,v 1.87 2012/03/06 17:06:06 bicatali Exp $
 
+*pari-2.8_pre20150611 (26 Jun 2015)
+
+  26 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
+  +files/pari-2.8_pre20150611-no-automagic.patch, +pari-2.8_pre20150611.ebuild,
+  -files/pari-9999-no-automagic.patch, -pari-2.8_pre20150519.ebuild,
+  pari-9999.ebuild:
+  Bump pari to newest sage snapshot for sage 6.8, minor clean up.
+
   23 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
   +files/pari-9999-no-automagic.patch, pari-9999.ebuild:
   updating pari-9999, test suite still failing because of difference in
